# garden-agent

./: .gitignore  Makefile  README.md  create_garden_db.sql  garden-agent.py  garden-notes.py  pyproject.toml
scripts/: init_db.py  setup.py  test_db.py  test_setup.py
src/garden_agent/: __init__.py  cli.py  config.py  connection.py  database.py  llm_client.py  migrations.py  models.py  operations.py  queries.py  setup.py  vector_store.py
