[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "garden-agent"
version = "0.1.0"
description = "AI-powered garden assistant with RAG, vector search, and natural language processing"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Drew", email = "herron@mailbox.org"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "chromadb>=0.4.0",
    "ollama>=0.1.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "pydantic>=2.0.0",
    "sentence-transformers>=2.2.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]

[project.urls]
"Homepage" = "https://github.com/drewherron/garden-agent"
"Bug Reports" = "https://github.com/drewherron/garden-agent/issues"
"Source" = "https://github.com/drewherron/garden-agent"

[project.scripts]
garden-agent = "garden_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true